--- a/Naive_Bayes_Classifier.ipynb
+++ b/Naive_Bayes_Classifier.ipynb
@@ -17,10 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Assignment 6\n",
         "# AI LAB\n",
         "\n",
-        "Aviral Mishra | 20225017 | Section D2\n"
+        "Aviral Mishra | 20225017\n"
       ],
       "metadata": {
         "id": "W0bOx56qx3Ek"
